feat: audit-log integration